# aws-resource-scanner

./: .envrc-example  .gitignore  .pre-commit-config.yaml  README.md  __init__.py  aws-scanner  aws_scanner.py  cli.py  poetry.toml  pyproject.toml  run_quick_tests.sh  setup.sh  test_aws_scanner.py  test_installation.py
aws_scanner_lib/: __init__.py  cache.py  logging.py  outputs.py  resource_groups_utils.py  scan.py
docs/: Architecture.md  LOGGING_ARCHITECTURE.md  POETRY_MIGRATION_GUIDE.md  SHELL_COMPLETION.md  aws-scanner-book.md
services/: __init__.py  autoscaling_service.py  ec2_service.py  ecs_service.py  elb_service.py  s3_service.py  vpc_service.py
